// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

//npx prisma studio

generator client {
  provider = "prisma-client-js"
  // output   = "../generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../docs"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id            String   @id @default(cuid())
  name          String
  email         String   @unique
  emailVerified Boolean  @default(false)
  image         String?
  firstName     String?
  lastName      String?
  isRoot        Boolean?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  session   Session[]
  account   Account[]
  relations Relation[] @relation("user-relations")
  relatedBy Relation[] @relation("relation")

  ProfileShowAsUser1 ProfileShow[]  @relation("UserAsUser1")
  ProfileShowAsUser2 ProfileShow[]  @relation("UserAsUser2")
  skill              Skill[]
  companyAdmin       CompanyAdmin[]
  formation          formation[]
  Experience         Experience[]

  writer Writer? @relation("userWriter")
}

model Company {
  id          String   @id @default(cuid())
  name        String
  activity    String?
  image       String?
  description String?
  createdAt   DateTime @default(now())

  companyAdmin CompanyAdmin[]
  formation    formation[]
  Experience   Experience[]

  writer Writer? @relation("companyWriter")
}

model WriterLink {
  id              String @id @default(cuid())
  userWriterId    String
  companyWriterId String

  userWriter    Writer @relation("WriterAsUserWriter", fields: [userWriterId], references: [id], onDelete: Cascade)
  companyWriter Writer @relation("WriterAsCompanyWriter", fields: [companyWriterId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@unique([userWriterId, companyWriterId])
}

model Writer {
  id String @id @default(cuid())

  userId    String? @unique
  companyId String? @unique

  user    User?    @relation("userWriter", fields: [userId], references: [id])
  company Company? @relation("companyWriter", fields: [companyId], references: [id])

  Post    Post[]
  Vote    Vote[]
  Comment Comment[]

  linkedCompanies WriterLink[] @relation("WriterAsUserWriter")
  LinkedUsers     WriterLink[] @relation("WriterAsCompanyWriter")
}

model formation {
  id          String    @id @default(cuid())
  name        String
  startDate   DateTime
  endDate     DateTime?
  description String?
  companyId   String?
  userId      String
  company     Company?  @relation(fields: [companyId], references: [id])
  user        User      @relation(fields: [userId], references: [id])
}

model Experience {
  id          String    @id @default(cuid())
  name        String
  companyName String?
  startDate   DateTime
  endDate     DateTime?
  description String?
  companyId   String?
  userId      String
  validated   Boolean   @default(false)
  validatedBy String?
  validatedAt DateTime?
  company     Company?  @relation(fields: [companyId], references: [id])
  user        User      @relation(fields: [userId], references: [id])
}

model Post {
  id         String   @id @default(cuid())
  createdAt  DateTime @default(now())
  content    String
  reactionId String?
  writerId   String
  writer     Writer   @relation(fields: [writerId], references: [id])

  media   Media[]
  Comment Comment[]
  Vote    Vote[]
}

model Vote {
  id        String   @id @default(cuid())
  writerId  String
  postId    String?
  commentId String?
  createdAt DateTime @default(now())
  status    Boolean

  writer  Writer   @relation(fields: [writerId], references: [id])
  post    Post?    @relation(fields: [postId], references: [id])
  comment Comment? @relation(fields: [commentId], references: [id])
}

model Media {
  id          String  @id @default(cuid())
  nom         String?
  url         String
  altText     String?
  description String?
  type        String?
  postId      String
  post        Post    @relation(fields: [postId], references: [id])
}

model Comment {
  id        String   @id @default(cuid())
  content   String
  createdAt DateTime @default(now())
  votes     Int?     @default(0)
  postId    String?
  commentId String?
  writerId  String
  writer    Writer   @relation(fields: [writerId], references: [id])
  post      Post?    @relation(fields: [postId], references: [id])
  comment   Comment? @relation("CommentAsParentComment", fields: [commentId], references: [id])

  replies Comment[] @relation("CommentAsParentComment")
  Vote    Vote[]
}

enum CompanyRole {
  SUPER_ADMIN
  ADMIN
  MODERATOR
}

model CompanyAdmin {
  id        String      @id @default(cuid())
  role      CompanyRole @default(MODERATOR)
  companyId String
  userId    String
  createdAt DateTime    @default(now())
  company   Company     @relation(fields: [companyId], references: [id])
  user      User        @relation(fields: [userId], references: [id])

  @@unique([companyId, userId])
}

model Skill {
  id     String @id @default(cuid())
  name   String
  level  Int
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Relation {
  id         String   @id @default(cuid())
  createdAt  DateTime @default(now())
  status     Boolean
  userId     String
  relationId String
  user       User     @relation("user-relations", fields: [userId], references: [id], onDelete: Cascade)
  relation   User     @relation("relation", fields: [relationId], references: [id], onDelete: Cascade)

  @@unique([userId, relationId])
}

//vue sur les profils (qui a vu mon profil)
model ProfileShow {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  idUser1   String
  idUser2   String
  user1     User     @relation("UserAsUser1", fields: [idUser1], references: [id], onDelete: Cascade)
  user2     User     @relation("UserAsUser2", fields: [idUser2], references: [id], onDelete: Cascade)
}

model Session {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  ipAddress String?
  userAgent String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Account {
  id                   String    @id @default(cuid())
  userId               String
  accountId            String
  providerId           String
  accessToken          String?
  refreshToken         String?
  accessTokenExpireAt  DateTime?
  refreshTokenExpireAt DateTime?
  scope                String?
  idToken              String?
  password             String?
  createdAt            DateTime  @default(now())
  updatedAt            DateTime  @updatedAt
  user                 User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Verification {
  id         String    @id @default(cuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  // Champs Better Auth
  token      String
  ipAddress  String
  userAgent  String
  userId     String
}
